--- a/Poker.Tests/Poker.Tests.csproj
+++ b/Poker.Tests/Poker.Tests.csproj
@@ -38,14 +38,12 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Bugs\test01.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Compile Include="Bugs\VerifyCanReadSomeParticularAppSetting.cs" />
     <Compile Include="TestAppConfig.cs" />
     <Compile Include="TestConfigurationPoker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
