--- a/Poker/Poker.nuspec
+++ b/Poker/Poker.nuspec
@@ -7,7 +7,7 @@
     <authors>mookid8000</authors>
     <owners>mookid8000</owners>
     <licenseUrl>https://opensource.org/licenses/MIT</licenseUrl>
-    <projectUrl>https://github.com/mookid8000/Debaser</projectUrl>
+    <projectUrl>https://github.com/rebus-org/Poker</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>app.config XML configuration poker</description>
     <copyright>Copyright 2012-2016</copyright>
